resolved bg overflowing on bigger mobiles

--- a/frontend/src/app/styles.module.scss
+++ b/frontend/src/app/styles.module.scss
@@ -36,6 +36,11 @@ $input-padding-left-mobile: 6%;
     z-index: -1;
     filter: brightness(0.6);
     object-fit: cover;
+
+    // Hack to match background color in mobile
+    @media (max-width: 800px) {
+      background: #000;
+    }
   }
 
   .heroSection {
